[metadata]
name = DecenTT-saapo-ka-baadshah
version = 0.0.1
author = Amey Mahadik
author_email = ameyarm@gmail.com
description = Decentralized Telemetry Transport (DecenTT)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saapo-ka-baadshah/DecenTT
project_urls =
    Bug Tracker = https://github.com/saapo-ka-baadshah/DecenTT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    certifi==2021.10.8
    charset-normalizer==2.0.8
    coloredlogs==15.0.1
    humanfriendly==10.0
    idna==3.3
    ipfs-api==0.2.3
    paho-mqtt==1.6.1
    python-dotenv==0.19.2
    requests==2.26.0
    six==1.16.0
    tqdm==4.62.3
    urllib3==1.26.7
    wget==3.2
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src